--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost/mudi
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 
 #spring.devtools.add-properties=false
 spring.jpa.hibernate.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.show_sql=false
