--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.hibernate.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Di
 
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.show_sql=false
+
+#spring.jackson.serialization.fail-on-empty-beans=false
